Crushed a bug creating overlapping first section

--- a/indexStyle.css
+++ b/indexStyle.css
@@ -233,7 +233,7 @@ h4 {
     
     #firstInfo {
         max-width: 400px;
-        margin: 30px calc((100% - 400px)/2);
+        margin: 20px auto;
     }
 
     #firstStores {
